--- a/adv_css/about.html
+++ b/adv_css/about.html
@@ -74,20 +74,50 @@
             The K&T 10 is currently in storage and out of service.</p>
             
             <img src="images/k&t_10_1.jpg" alt="k&t_10_1">
-            <hr>
-            <ul>
-                <li><a href="https://ageofsteamroundhouse.org/collections/southern-wood-preserving-co-0-4-0t-no-3-2-2/" target="_blank">3 Spot</a></li>
-                <li><a href="https://www.train-museum.org/locomotives-rolling-stock/locomotives/" target="_blank">GM 203 1</a></li>
-                <li><a href="https://ageofsteamroundhouse.org/collections/alabama-tennessee-northern-2-10-0-no-401/" target="_blank">GM 203 2</a></li>
-                <li><a href="https://hawkinsrails.net/shortlines/gm/gm.htm" target="_blank">GM 203 3</a></li>
-                <li><a href="https://www.tvrail.com/equipment/southern-4501/" target="_blank">Southern 4501 TVRM page</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Southern_Railway_4501" target="_blank">Southern 4501 Wiki</a></li>
-                <li><a href="https://www.tvrail.com/equipment/kentucky-and-tennessee-railway-10/" target="_blank">K&T 10 TVRM page</a></li>
-            </ul>
-            <hr>
-
-            
         </main>
+        <div id="lower">
+            <div class="col">
+                 <h3>TVRM Early Locomotives Information Links List</h3>
+                 <ul>
+                    <li><a href="https://ageofsteamroundhouse.org/collections/southern-wood-preserving-co-0-4-0t-no-3-2-2/" target="_blank">3 Spot</a></li>
+                    <li><a href="https://hawkinsrails.net/shortlines/gm/gm.htm" target="_blank">GM 203</a></li>
+                    <li><a href="https://hawkinsrails.net/shortlines/brim/brimstone.htm" target="_blank">Brimstone 35 & 36</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/southern-4501/" target="_blank">Southern 4501 TVRM page</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/kentucky-and-tennessee-railway-10/" target="_blank">K&T 10 TVRM page</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/nasvhille-chattanooga-st-louis-41/" target="_blank">NC&STL 41 TVRM page</a></li>
+                </ul>
+                <img src="images/tvrm_1970.jpg" alt="tvrm_1970">
+                <a class="button" href="about.html">Early Locomotives</a>
+            </div>
+            <div class="col"> 
+                <h3>TVRM 1970-1999 Locomotives Information Links List</h3>
+                 <ul>
+                    <li><a href="https://www.tvrail.com/equipment/southern-630/" target="_blank">Southern 630 TVRM page</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/us-army-610/" target="_blank">USATC 610 TVRM page</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Southern_Railway_722" target="_blank">Southern 722 Wiki</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/central-of-georgia-349/" target="_blank">COG 349 TVRM page</a></li>
+                    <li><a href="https://locomotive.fandom.com/wiki/Louisiana_%26_Arkansas_No._509" target="_blank">L&A 509 Fan Wiki</a></li>
+                    <li><a href="https://rgusrail.com/tncbt1.html" target="_blank">CB&T 1 rgusrail</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/u-s-army-8669/">USATC 8669 TVRM page</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/us-air-force-7467/">NC&STL 36 TVRM page</a></li>
+                    <li><a href="https://www.tvrail.com/equipment/central-of-georgia-railway-109/">COG 109 TVRM page</a></li>
+            </ul>
+            <img src="images/tvrm_1992.jpg" alt="tvrm_1992">
+            <a class="button" href="xpacs.html">1970-1999 Locomotives</a>
+            </div>
+            <div class="col">
+                <h3>TVRM 2000-Present Day Locmotives Information Links List</h3>
+                 <ul>
+                 <li><a href="https://en.wikipedia.org/wiki/Canadian_National_5288" target="_blank">CN 5288 Wiki</a></li>
+                 <li><a href="https://www.tvrail.com/equipment/nashville-chattanooga-and-st-louis-710/">NC&STL 710 TVRM page</a></li>
+                 <li><a href="https://www.tvrail.com/equipment/southern-railway-2594/">Southern 2594 TVRM page</a></li>
+                 <li><a href="https://www.tvrail.com/equipment/southern-railway-3170/">Southern 3170 TVRM page</a></li>
+                 <li><a href="https://www.tvrail.com/equipment/southern-railway-5000/">Southern 5000 TVRM page</a></li>
+            </ul>
+            <img src="images/tvrm_2018_1.jpg" alt="tvrm_2018_1">
+            <p>Coming Soon.</p>
+            </div>
+            </div>
         <hr>
         <footer> &copy; 2024 Engines of TVRM</footer>
     </div>
