--- a/final/about.html
+++ b/final/about.html
@@ -74,6 +74,7 @@
                 <img src="images/the_etu.png" alt="the_etu">
                 <a class="button" href="about.html">Back Home</a>
             </div>
+            </div>    
         <hr>
         <footer> &copy; 2024 The Everything Universe</footer>
     </div>
